# Vlysy

./: .render-buildpacks.yaml  ai_analyzer.py  app.py  main.py  models.py  pyproject.toml  render.yaml  routes.py  runner.py  temp_script.sh  temp_testimonials.html
attached_assets/: README.md  app.py  pyproject.toml  requirements.txt  resume_parser.py
static/css/: custom.css
static/examples/: marketing_specialist_resume.txt  software_developer_resume.txt
static/js/: main.js  translations.js
templates/: 404.html  500.html  anschreiben.html  donate.html  examples.html  faq.html  index.html  layout.html  recommendations.html  result.html
