[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-session>=0.8.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "openai>=1.70.0",
    "werkzeug>=3.1.3",
    "anthropic>=0.49.0",
    "fpdf>=1.7.2",
    "pdfminer-six>=20250327",
    "requests>=2.32.3",
]
