[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "resume-analyzer"
version = "0.1.0"
description = "AI-powered resume analyzer and cover letter generator"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
email-validator = ">=2.2.0"
flask-session = ">=0.8.0"
flask = ">=3.1.0"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
psycopg2-binary = ">=2.9.10"
pypdf2 = ">=3.0.1"
python-docx = ">=1.1.2"
openai = ">=1.70.0"
werkzeug = ">=3.1.3"
anthropic = ">=0.49.0"
fpdf = ">=1.7.2"
pdfminer-six = ">=20220524"
requests = ">=2.32.3"
groq = ">=0.22.0"
sqlalchemy = ">=2.0.40"
